tests/ui/transmute-mut-dst-not-intobytes.msrv.stderr
error[E0277]: the trait bound `Dst: IntoBytes` is not satisfied
  --> $DIR/transmute-mut-dst-not-intobytes.rs:23:36
   |
23 | const DST_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Dst`
   |
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
